--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  background-color: #e4e9f0;
+  padding-bottom: 3%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tab-container {
+  margin-top: 20px;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tab-button {
+  margin-bottom: 1.5%;
+  padding: 30px;
+  width: 50%;
+  border-color: #ccc;
+  border-bottom: none;
+  background-color: transparent;
+  border-color: #999;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tab-button:first-of-type {
+  border-right: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.show {
+  display: block !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hide {
+  display: none !important;
 }
