--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,30 @@
-body {
+* {
   margin: 0;
+  padding: 0; 
+  text-align: center;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; 
+    } 
+}
+
+header {
+  margin-top: 5%;
+  font-size: 30px;
+}
+
+.App {
+  margin: 5%;
 }
 
