--- a/src/components/coins/coins.styles.css
+++ b/src/components/coins/coins.styles.css
@@ -1,3 +1,27 @@
-.coins-container {
-  color: red;
+.coin-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 64px;
+}
+
+.coing-search {
+  margin-bottom: 64px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.coin-text {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.coin-input {
+  padding-left: 16px;
+  width: 300px;
+  height: 30px;
+  border-radius: 4px;
+  border: none;
 }
